<resources>
    <string name="app_name">UTS</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="user_list_image">Image</string>
    <string name="user_name">%1$s %2$s</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="register">Register</string>
    <string name="github">Github Username</string>
    <string name="nim">NIM</string>
    <string name="email">Email</string>
    <string name="namaa">Richard</string>

    <string name="login_info">Don\'t have an account yet?</string>
    <string name="register_now">Register now</string>

    <string name="register_info">Already Registered?</string>
    <string name="login_now">Login now</string>

    <string name="logout">Logout</string>
    <string name="test"> Test</string>
    <string name="detail">Detail</string>
</resources>