<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.RegistrationFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:background="@color/teal_200"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.306">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="609dp"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="25dp"
                    android:text="@string/register"
                    android:textSize="32sp" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:autofillHints="username"
                    android:hint="@string/username"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_pass"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:autofillHints="text"
                    android:hint="@string/pass"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_git"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:autofillHints="text"
                    android:hint="@string/github"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_nim"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:autofillHints="text"
                    android:hint="@string/nim"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:autofillHints="text"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <Button
                    android:id="@+id/btn_registration"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="@color/purple_700"
                    android:padding="1dp"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_info"
                    android:textSize="18sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"/>

                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_now"
                    android:textColor="#1E90FF"
                    android:textSize="18sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>