<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.detail.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tvImage"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:layout_marginBottom="72dp"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"
            android:layout_marginBottom="10sp"
            android:layout_marginStart="30dp" />

        <TextView
            android:id="@+id/dbUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:textSize="20sp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10sp"
            android:textColor="@color/purple_200"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:layout_marginBottom="10sp"
            android:layout_marginStart="30dp" />

        <TextView
            android:id="@+id/dbEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:textSize="20sp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10sp"
            android:textColor="@color/purple_200" />
    </LinearLayout>

</FrameLayout>