<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvImage"
            android:layout_width="196dp"
            android:layout_height="196dp"
            android:layout_gravity="center"
            android:text="@string/test"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="96sp"
            android:gravity="center"
            android:background="@drawable/rectangle"
            android:layout_marginVertical="64dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"
            android:layout_marginBottom="5sp"
            android:layout_marginStart="30dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="5dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/dbUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:textSize="20sp"
                android:layout_marginVertical="5dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:textColor="@color/purple_200"/>
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/github"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="5dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/dbGit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:textSize="20sp"
                android:layout_marginVertical="5dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:textColor="@color/purple_200"/>
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nim"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="5dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/dbNim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:textSize="20sp"
                android:layout_marginVertical="5dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:textColor="@color/purple_200"/>
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="5dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/dbEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:textSize="20sp"
                android:layout_marginVertical="5dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:textColor="@color/purple_200"/>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30sp"
            android:background="@color/purple_700"
            android:padding="1dp"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>